--- a/css/justone.css
+++ b/css/justone.css
@@ -4,12 +4,13 @@
 
 
 
-html,body, div, a, span, img, p, select {
+html, body, div, a, span, img, p, select, ul, li {
   display: block;
   margin: 0;
   padding: 0;
   border: 0;
   text-decoration: none;
+  list-style: none;
   font-size: 10pt;
 }
 
@@ -23,6 +24,10 @@ body {
 
 .pc_all {
   width: 1920px;
+}
+
+.mob_all {
+  display: none;
 }
 
 header {
@@ -265,3 +270,149 @@ header {
       
 
 
+/* 모바일 화면 시작 */
+
+@media all and (max-width: 800px) {
+
+  .pc_all {
+    display: none;
+  }
+  
+  .mob_all {
+    display: flex;
+    flex-flow: column nowrap;
+
+    width: 450px;
+  }
+
+  header {
+    width: 450px;
+    height: 240px;
+    margin-bottom: 15px;
+    display: flex;
+    flex-flow: column nowrap;
+  }
+
+
+      .m_top_row_1 {
+        position: relative;
+        clear: both;
+        width: 400px;
+        margin: 0 auto;
+        height: 30px;
+
+        display: flex;
+        flex-flow: row nowrap;
+        justify-content: space-between;
+        align-items: center;
+        /* background-color: aqua; */
+      }
+
+        .m_top_row_1 > select {
+          appearance: none;
+          outline: none;
+          width: 100px;
+          height: 25px;
+          padding-left: 5px;
+          border: solid #2b2b2b70 1px;
+          background: url(./../images/expand_more.png) 93% no-repeat;  /* select 버튼 이미지 */
+          border-radius: 5px;
+          font-family: 'Montserrat', sans-serif;
+          font-size: 12px;
+        }
+
+          .m_icon_box {
+            width: 85px;
+            display: flex;
+            flex-flow: row nowrap;
+            align-items: center;
+            justify-content: space-between;
+          }
+
+
+        #m_logo {
+          position: relative;
+          clear: both;
+          width: 450px;
+          height: 80px;
+
+          display: flex; /*로고 가운데 정렬 */
+          flex-flow: column nowrap;
+          align-items: center;
+          justify-content: center; 
+        }
+
+        .m_menu_bar_1 {
+          width: 450px;
+          height: 40px;
+          background-color: rgb(252, 246, 239);
+
+          display: flex;
+          flex-flow: row nowrap;
+          align-items: center;
+          justify-content: space-around;
+        }
+
+            .m_menu_bar_1 li {
+              width: 80px;
+              font-size: 10pt;
+              font-family: 'Noto Sans KR', sans-serif;
+              text-align: center;
+              color: #262626;
+              /* background-color: red; */
+            }
+
+        .m_menu_bar_2 {
+          width: 450px;
+          height: 90px;
+          margin-top: 15px;
+          display: flex;
+          flex-flow: row wrap;
+        }
+
+            .m_menu_bar_2 li {
+              width: 150px;
+              height: 30px;
+              line-height: 30px;
+              /* background-color: aquamarine; */
+
+              text-align: center;
+              color: #262626;
+              font-size: 12px;
+              /* font-weight: 600; */
+              font-family: 'Montserrat', sans-serif;
+            }
+
+              .m_menu_bar_2 > a:nth-child(1) > li {
+                color: rgb(215, 0, 0);
+              }
+
+              .m_menu_bar_2 > a:nth-child(4) > li {
+                color: rgb(190, 131, 190);
+              }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+}
