--- a/css/justone.css
+++ b/css/justone.css
@@ -319,6 +319,7 @@ header {
           border-radius: 5px;
           font-family: 'Montserrat', sans-serif;
           font-size: 12px;
+          color: #262626;
         }
 
           .m_icon_box {
