--- a/css/justone.css
+++ b/css/justone.css
@@ -468,22 +468,44 @@ header {
         color: #ababab;
       }
 
-      .price_row {
+      /* 정가, 할인가, 할인율 포함 */
+      .m_price_row {
         width: 160px;
+        height: 20px;
+        
+        display: flex;
+        flex-flow: row nowrap;
+        align-items: center;
+        margin-bottom: 5px;
       }
+
+        .m_price_row span{
+          width: 60px;
+          height: 20px;
+        }
+
+        .m_price_row span del {
+          font-size: 12px;
+        }
       
           .price_text {
-            padding-bottom: 5px;
-            font-size: 14px;
+            height: 20px;
+            font-size: 13px;
             font-weight: 600;
           }
 
-          .discount_text {
+          .discount_text{
+            width: 40px;
+            height: 20px;
+            line-height: 20px;
             margin-right: 0px; /*불필요한 우측 마진 제거*/
-            font-size: 10pt;
+            font-size: 15px;
             font-weight: 600;
             color: rgb(255, 132, 0);
+            top: -3px;
           }
+
+
 
       .m_main_img_2 {
         position: relative;
